added database creations script, fixed to work again with the changes to the website and added maven